slug field have been added in TourTranslation model
